[gd_scene load_steps=12 format=3 uid="uid://c31g0smlywes2"]

[ext_resource type="Script" uid="uid://b2k0wdgpd2gde" path="res://Scripts/CHARACTERS/ennemy.gd" id="1_uq27j"]
[ext_resource type="PackedScene" uid="uid://pej2qquyboig" path="res://Scenes/UI/damages_text.tscn" id="2_gvr15"]
[ext_resource type="PackedScene" uid="uid://5uh2knats63k" path="res://Scenes/ITEMS/xp_sphere.tscn" id="3_1b0bn"]
[ext_resource type="Texture2D" uid="uid://7ox7o2wgyn6h" path="res://Assets/Mobs/Wolf_Walk.png" id="4_pi3ax"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1b0bn"]
radius = 5.0
height = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ucqlk"]
atlas = ExtResource("4_pi3ax")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ic66"]
atlas = ExtResource("4_pi3ax")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q36x5"]
atlas = ExtResource("4_pi3ax")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nynkr"]
atlas = ExtResource("4_pi3ax")
region = Rect2(192, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_j5v2q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucqlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ic66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q36x5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nynkr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gvr15"]
radius = 7.0
height = 28.0

[node name="Ennemy" type="CharacterBody2D" groups=["ennemies"]]
z_index = 20
z_as_relative = false
y_sort_enabled = true
collision_layer = 2
collision_mask = 8204
script = ExtResource("1_uq27j")
damages_text = ExtResource("2_gvr15")
xp_scene = ExtResource("3_1b0bn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["ennemies"]]
visible = false
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_1b0bn")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0
path_postprocessing = 1
path_metadata_flags = 0
simplify_path = true
simplify_epsilon = 10.0

[node name="path_Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="MarkerDamages" type="Marker2D" parent="."]
position = Vector2(0, -22)

[node name="DamageTimer_Get" type="Timer" parent="."]
wait_time = 0.1

[node name="Visuals" type="Node" parent="."]

[node name="DamageTimer_OnPlayer" type="Timer" parent="."]
wait_time = 0.3

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_as_relative = false
y_sort_enabled = true
position = Vector2(-1, -13)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_j5v2q")
autoplay = "default"

[node name="Hitbox" type="Area2D" parent="." groups=["ennemies"]]
visible = false
collision_layer = 2
collision_mask = 1101

[node name="HitShape" type="CollisionShape2D" parent="Hitbox" groups=["ennemies"]]
visible = false
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_gvr15")
debug_color = Color(0.88270926, 0.06722261, 0.79457116, 0.41960785)

[connection signal="tree_exited" from="." to="." method="_on_ennemy_death"]
[connection signal="timeout" from="path_Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DamageTimer_Get" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="DamageTimer_OnPlayer" to="." method="_on_damage_timer_on_player_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_exited"]
